sending parameters in form to strapi

--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -17,6 +17,14 @@ h1 {
   font-size: 3rem;
 }
 
+ul{
+    display: flex;
+    gap: 2rem;
+    width: 50%;
+    margin: 0 auto;
+    padding: 4rem;
+}
+
 li{
     list-style-type: none;
 }
