--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -19,10 +19,12 @@ h1 {
 
 ul{
     display: flex;
+    justify-content: space-between;
     gap: 2rem;
     width: 50%;
     margin: 0 auto;
     padding: 4rem;
+    flex-wrap: wrap;
 }
 
 li{
@@ -75,7 +77,7 @@ li{
 
 .card__container{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 10vw;
     background-color: white;
     padding: 1rem;
@@ -189,6 +191,21 @@ li{
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
     background: #555;
+  }
+
+  /*artwork detail*/
+
+  .detail__container{
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    padding: 1rem;
+    border-radius: 1rem;
+    margin: 0 auto;
+  }
+
+  .canvas{
+    width: 15vw;
   }
 
   
