--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -21,7 +21,7 @@ ul{
     display: flex;
     justify-content: space-between;
     gap: 2rem;
-    width: 50%;
+    width: 60%;
     margin: 0 auto;
     padding: 4rem;
     flex-wrap: wrap;
@@ -68,20 +68,23 @@ li{
     text-decoration: underline;
 }
 
-.card__image{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-
-}
-
 .card__container{
     display: flex;
     flex-direction: row;
-    width: 10vw;
+    width: 15vw;
     background-color: white;
     padding: 1rem;
-    border-radius: 1rem;
+    border-radius: 1.5rem;
+    gap: 1rem;
+}
+
+.card__container h3{
+    font-family: "Montserrat Alternates", sans-serif;
+    font-weight: 900;
+    font-size: 1rem;
+    color: white;
+    text-decoration: none;
+
 }
 
 .back__button{
@@ -93,6 +96,7 @@ li{
     font-family: "Montserrat Alternates", sans-serif;
     font-weight: 900;
     text-decoration: none;
+    margin-inline-end: 1rem;
 }
 
 
