--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -19,6 +19,7 @@ h1 {
 
 ul{
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     gap: 2rem;
     width: 60%;
@@ -76,6 +77,12 @@ li{
     padding: 1rem;
     border-radius: 1.5rem;
     gap: 1rem;
+}
+
+.card__container .canvas{
+    width: 5vw;
+    border-radius: 1rem;
+
 }
 
 .card__container h3{
